--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "firebase": "^12.6.0",
+    "html2canvas": "npm:html2canvas-pro@^1.5.13",
     "next": "16.0.8",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-to-pdf": "^2.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
